ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:  
  rules:  
    - host: news.info.com
      http: 
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: wp-service
                port:
                  number: 30005
